# Xped

./: .clang-format  .gitignore  .gitmodules  .travis.yml  ADTensor_8hpp.html  ADTensor_8hpp.js  ADTensor_8hpp__dep__incl.map  ADTensor_8hpp__dep__incl.md5  ADTensor_8hpp__incl.map  ADTensor_8hpp__incl.md5  ADTensor_8hpp_source.html  AdjointOp_8hpp.html  AdjointOp_8hpp.js  AdjointOp_8hpp__dep__incl.map  AdjointOp_8hpp__dep__incl.md5  AdjointOp_8hpp__incl.map  AdjointOp_8hpp__incl.md5  AdjointOp_8hpp_source.html  ArgParser_8h.html  ArgParser_8h.js  ArgParser_8h__dep__incl.map  ArgParser_8h__dep__incl.md5  ArgParser_8h__incl.map  ArgParser_8h__incl.md5  ArgParser_8h_a36587d1983e956dc80f42a8f369a938e_icgraph.map  ArgParser_8h_a36587d1983e956dc80f42a8f369a938e_icgraph.md5  ArgParser_8h_source.html  Basis_8cpp.html  Basis_8cpp.js  Basis_8cpp__dep__incl.map  Basis_8cpp__dep__incl.md5  Basis_8cpp__incl.map  Basis_8cpp__incl.md5  Basis_8hpp.html  Basis_8hpp.js  Basis_8hpp__dep__incl.map  Basis_8hpp__dep__incl.md5  Basis_8hpp__incl.map  Basis_8hpp__incl.md5  Basis_8hpp_source.html  (+3736 more)
.circleci/: config.yml
.github/workflows/: build.yml  builds.yml  cmake.yml  gen_cmake_docs.yml  gen_docs.yml  tests.yml  tests.yml.disabled
benchmarks/: CMakeLists.txt  bench.cpp
cmake/: Cache.cmake  CompilerOptions.cmake  CompilerWarnings.cmake  Doxygen.cmake  Functions.cmake  PrintProperties.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  addGitLibs.cmake  clang-format.cmake
docs/: main.md
docs/extras/: header.html
docs/snippets/: ad.cpp  quickstart.cpp  s_mps.cpp  s_qbasis.cpp
examples/: CMakeLists.txt  ad_ramp.cpp  calc_corrLength.cpp  chi_ramp.cpp  fpeps_ad.cpp  ipeps_ad.cpp  peps_ad.cpp  simple_update.cpp
include/Xped/AD/: ADTensor.hpp  complex_var.hpp  complex_vari.hpp  finite_diff.hpp  reverse_pass_callback_alloc.hpp  var_value.hpp  vari_value.hpp
include/Xped/Core/: AdjointOp.hpp  Basis.hpp  BlockUnaryOp.hpp  CoeffBinaryOp.hpp  CoeffUnaryOp.hpp  DiagCoeffBinaryOp.hpp  DiagCoeffUnaryOp.hpp  FusionTree.hpp  Qbasis.hpp  ScalarTraits.hpp  (+10 more)
ports/array/: portfile.cmake  vcpkg.json
ports/assert/: portfile.cmake  vcpkg.json
ports/ceres/: portfile.cmake  vcpkg.json
ports/ctf/: fix_Makefile.patch  fix_configure.patch  fix_expand_includes.patch  fix_vector.patch  portfile.cmake  vcpkg.json
ports/doctest/: 0001_fix_add_tests.patch  portfile.cmake
ports/eigen3/: portfile.cmake
ports/glog/: portfile.cmake
ports/lru-cache/: portfile.cmake  vcpkg.json
ports/scalapack/: portfile.cmake  vcpkg.json
ports/seq/: portfile.cmake  vcpkg.json
ports/spdlog/: adjust_log_level_names  portfile.cmake
ports/stan-math/: 0001_fix_eigen_plugins.patch  portfile.cmake  vcpkg.json
ports/sundials/: cmake_config.patch  portfile.cmake  vcpkg.json
ports/tabulate/: portfile.cmake  vcpkg.json
ports/tbb/: force_shared.patch  portfile.cmake  print_shared_opt.patch  vcpkg.json
ports/wignersun/: CMakeLists.txt  config.cmake.in  portfile.cmake  split_to_header_and_souce.patch  vcpkg.json
ports/yas/: portfile.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  (+153 more)
src/: Basis.hpp  CMakeLists.txt  Fuser.hpp  FusionTree.hpp  FusionTreePrint.hpp  Makefile  Mps.hpp  MpsAlgebra.hpp  Qbasis.hpp  Tensor.hpp  cmake_install.cmake  main.cpp
src/Core/: AdjointOp.hpp  Basis.cpp  Basis.hpp  FusionTree.cpp  FusionTree.hpp  FusionTreePrint.hpp  Qbasis.cpp  Qbasis.hpp  ScaledOp.hpp  Tensor.cpp  TensorBase.cpp  TensorHelper.cpp  Xped.cpp  Xped.hpp  XpedBase.cpp  XpedBase.hpp  XpedHelper.cpp  XpedHelper.hpp  XpedTypedefs.hpp  treepair.cpp
src/Hash/: hash.hpp
src/Interfaces/: MatrixInterface.hpp  MatrixInterface_Array_impl.hpp  MatrixInterface_Cyclops_impl.cpp  MatrixInterface_Cyclops_impl.hpp  MatrixInterface_Eigen_impl.cpp  MatrixInterface_Eigen_impl.hpp  MatrixMultiplication.hpp  PlainInterface.hpp  PlainInterface_Cyclops_impl.cpp  PlainInterface_Cyclops_impl.hpp  PlainInterface_Eigen_Array_impl.hpp  PlainInterface_Eigen_impl.cpp  PlainInterface_Eigen_impl.hpp  TensorInterface.hpp  TensorInterface_Array_impl.hpp  TensorInterface_Cyclops_impl.cpp  TensorInterface_Cyclops_impl.hpp  TensorInterface_Eigen_impl.cpp  TensorInterface_Eigen_impl.hpp  VectorInterface.hpp  VectorInterface_Cyclops_impl.cpp  VectorInterface_Cyclops_impl.hpp  VectorInterface_Eigen_impl.cpp  VectorInterface_Eigen_impl.hpp  tensor_traits.hpp
src/MPS/: Mps.cpp  Mps.hpp  MpsAlgebra.cpp  MpsAlgebra.hpp  MpsContractions.cpp  MpsContractions.hpp
src/Models/: Heisenberg.hpp
src/PEPS/: CTM.cpp  CTMSolver.cpp  LinearAlgebra.cpp  PEPSContractions.cpp  Pattern.cpp  SimpleUpdate.cpp  TMatrix.cpp  TimePropagator.cpp  UnitCell.cpp  iPEPS.cpp
src/Physics/: SiteOperator.cpp
src/Symmetry/: SU2.cpp  SU2.hpp  SU2Wrappers.hpp  SUN.cpp  SymBase.hpp  U0.hpp  U1.hpp  qarray.hpp
src/Util/: Logging.cpp  Macros.hpp  Mpi.cpp  Mpi.hpp  Random.hpp
src/hash/: hash.hpp
src/interfaces/: CMakeLists.txt  tensor_traits.hpp
src/models/: Heisenberg.cpp  Heisenberg.hpp  Makefile  cmake_install.cmake
src/symmetry/: SU2.hpp  SU2Wrappers.hpp  SymBase.hpp  U0.hpp  U1.hpp  functions.hpp  kind_dummies.hpp  qarray.hpp
src/util/: Constfct.hpp  Macros.hpp  Random.hpp
tests/: CMakeLists.txt  ad.cpp  ad_ramp.cpp  ad_tests.hpp  basis.cpp  driver.cpp  mps.cpp  mps_tests.hpp  peps_ad.cpp  physics.cpp  simple_update.cpp  tensor.cpp  tensor_tests.hpp  tree.cpp  tree_tests.hpp
tools/: CMakeLists.txt  ad_summary.py  display_state.cpp
triplets/: x64-linux-clang-libcxx.cmake  x64-linux-clang-libcxx.toolchain.cmake  x64-linux-clang.cmake  x64-linux-clang.toolchain.cmake  x64-linux-icpx.cmake  x64-linux-icpx.toolchain.cmake
(+106 files in other folders)
